--- a/plugin/md_instant/index.html
+++ b/plugin/md_instant/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <meta charset=utf-8>
-    <title>python vim instant markdown</title>
-    <style type='text/css'> <!-- github markdown style from Mou -->
+    <title>vim instant markdown</title>
+    <style>
+      <!-- github markdown style from Mou -->
       *{margin:0;padding:0;}
       body {
         font:13.34px helvetica,arial,freesans,clean,sans-serif;
@@ -78,77 +79,70 @@
           margin:10px auto;
         }
       }
-    </style>
-    <style type='text/css'> <!-- pygments style from Armin Ronacher -->
-      pre .hll { background-color: #ffffcc }
-      pre .c { color: #8f5902; font-style: italic } /* Comment */
-      pre .err { color: #a40000; border: 1px solid #ef2929 } /* Error */
-      pre .g { color: #000000 } /* Generic */
-      pre .k { color: #204a87; font-weight: bold } /* Keyword */
-      pre .l { color: #000000 } /* Literal */
-      pre .n { color: #000000 } /* Name */
-      pre .o { color: #ce5c00; font-weight: bold } /* Operator */
-      pre .x { color: #000000 } /* Other */
-      pre .p { color: #000000; font-weight: bold } /* Punctuation */
-      pre .cm { color: #8f5902; font-style: italic } /* Comment.Multiline */
-      pre .cp { color: #8f5902; font-style: italic } /* Comment.Preproc */
-      pre .c1 { color: #8f5902; font-style: italic } /* Comment.Single */
-      pre .cs { color: #8f5902; font-style: italic } /* Comment.Special */
-      pre .gd { color: #a40000 } /* Generic.Deleted */
-      pre .ge { color: #000000; font-style: italic } /* Generic.Emph */
-      pre .gr { color: #ef2929 } /* Generic.Error */
-      pre .gh { color: #000080; font-weight: bold } /* Generic.Heading */
-      pre .gi { color: #00A000 } /* Generic.Inserted */
-      pre .go { color: #000000; font-style: italic } /* Generic.Output */
-      pre .gp { color: #8f5902 } /* Generic.Prompt */
-      pre .gs { color: #000000; font-weight: bold } /* Generic.Strong */
-      pre .gu { color: #800080; font-weight: bold } /* Generic.Subheading */
-      pre .gt { color: #a40000; font-weight: bold } /* Generic.Traceback */
-      pre .kc { color: #204a87; font-weight: bold } /* Keyword.Constant */
-      pre .kd { color: #204a87; font-weight: bold } /* Keyword.Declaration */
-      pre .kn { color: #204a87; font-weight: bold } /* Keyword.Namespace */
-      pre .kp { color: #204a87; font-weight: bold } /* Keyword.Pseudo */
-      pre .kr { color: #204a87; font-weight: bold } /* Keyword.Reserved */
-      pre .kt { color: #204a87; font-weight: bold } /* Keyword.Type */
-      pre .ld { color: #000000 } /* Literal.Date */
-      pre .m { color: #0000cf; font-weight: bold } /* Literal.Number */
-      pre .s { color: #4e9a06 } /* Literal.String */
-      pre .na { color: #c4a000 } /* Name.Attribute */
-      pre .nb { color: #204a87 } /* Name.Builtin */
-      pre .nc { color: #000000 } /* Name.Class */
-      pre .no { color: #000000 } /* Name.Constant */
-      pre .nd { color: #5c35cc; font-weight: bold } /* Name.Decorator */
-      pre .ni { color: #ce5c00 } /* Name.Entity */
-      pre .ne { color: #cc0000; font-weight: bold } /* Name.Exception */
-      pre .nf { color: #000000 } /* Name.Function */
-      pre .nl { color: #f57900 } /* Name.Label */
-      pre .nn { color: #000000 } /* Name.Namespace */
-      pre .nx { color: #000000 } /* Name.Other */
-      pre .py { color: #000000 } /* Name.Property */
-      pre .nt { color: #204a87; font-weight: bold } /* Name.Tag */
-      pre .nv { color: #000000 } /* Name.Variable */
-      pre .ow { color: #204a87; font-weight: bold } /* Operator.Word */
-      pre .w { color: #f8f8f8; text-decoration: underline } /* Text.Whitespace */
-      pre .mf { color: #0000cf; font-weight: bold } /* Literal.Number.Float */
-      pre .mh { color: #0000cf; font-weight: bold } /* Literal.Number.Hex */
-      pre .mi { color: #0000cf; font-weight: bold } /* Literal.Number.Integer */
-      pre .mo { color: #0000cf; font-weight: bold } /* Literal.Number.Oct */
-      pre .sb { color: #4e9a06 } /* Literal.String.Backtick */
-      pre .sc { color: #4e9a06 } /* Literal.String.Char */
-      pre .sd { color: #8f5902; font-style: italic } /* Literal.String.Doc */
-      pre .s2 { color: #4e9a06 } /* Literal.String.Double */
-      pre .se { color: #4e9a06 } /* Literal.String.Escape */
-      pre .sh { color: #4e9a06 } /* Literal.String.Heredoc */
-      pre .si { color: #4e9a06 } /* Literal.String.Interpol */
-      pre .sx { color: #4e9a06 } /* Literal.String.Other */
-      pre .sr { color: #4e9a06 } /* Literal.String.Regex */
-      pre .s1 { color: #4e9a06 } /* Literal.String.Single */
-      pre .ss { color: #4e9a06 } /* Literal.String.Symbol */
-      pre .bp { color: #3465a4 } /* Name.Builtin.Pseudo */
-      pre .vc { color: #000000 } /* Name.Variable.Class */
-      pre .vg { color: #000000 } /* Name.Variable.Global */
-      pre .vi { color: #000000 } /* Name.Variable.Instance */
-      pre .il { color: #0000cf; font-weight: bold } /* Literal.Number.Integer.Long */
+
+      .hll { background-color: #f8f8f8; border: 1px solid #ccc; padding: 6px 10px; border-radius: 3px; }
+      .c { color: #999988; font-style: italic; }
+      .err { color: #a61717; background-color: #e3d2d2; }
+      .k { font-weight: bold; }
+      .o { font-weight: bold; }
+      .cm { color: #999988; font-style: italic; }
+      .cp { color: #999999; font-weight: bold; }
+      .c1 { color: #999988; font-style: italic; }
+      .cs { color: #999999; font-weight: bold; font-style: italic; }
+      .gd { color: #000000; background-color: #ffdddd; }
+      .gd .x { color: #000000; background-color: #ffaaaa; }
+      .ge { font-style: italic; }
+      .gr { color: #aa0000; }
+      .gh { color: #999999; }
+      .gi { color: #000000; background-color: #ddffdd; }
+      .gi .x { color: #000000; background-color: #aaffaa; }
+      .go { color: #888888; }
+      .gp { color: #555555; }
+      .gs { font-weight: bold; }
+      .gu { color: #800080; font-weight: bold; }
+      .gt { color: #aa0000; }
+      .kc { font-weight: bold; }
+      .kd { font-weight: bold; }
+      .kn { font-weight: bold; }
+      .kp { font-weight: bold; }
+      .kr { font-weight: bold; }
+      .kt { color: #445588; font-weight: bold; }
+      .m { color: #009999; }
+      .s { color: #dd1144; }
+      .n { color: #333333; }
+      .na { color: teal; }
+      .nb { color: #0086b3; }
+      .nc { color: #445588; font-weight: bold; }
+      .no { color: teal; }
+      .ni { color: purple; }
+      .ne { color: #990000; font-weight: bold; }
+      .nf { color: #990000; font-weight: bold; }
+      .nn { color: #555555; }
+      .nt { color: navy; }
+      .nv { color: teal; }
+      .ow { font-weight: bold; }
+      .w { color: #bbbbbb; }
+      .mf { color: #009999; }
+      .mh { color: #009999; }
+      .mi { color: #009999; }
+      .mo { color: #009999; }
+      .sb { color: #dd1144; }
+      .sc { color: #dd1144; }
+      .sd { color: #dd1144; }
+      .s2 { color: #dd1144; }
+      .se { color: #dd1144; }
+      .sh { color: #dd1144; }
+      .si { color: #dd1144; }
+      .sx { color: #dd1144; }
+      .sr { color: #009926; }
+      .s1 { color: #dd1144; }
+      .ss { color: #990073; }
+      .bp { color: #999999; }
+      .vc { color: teal; }
+      .vg { color: teal; }
+      .vi { color: teal; }
+      .il { color: #009999; }
+      .gc { color: #999; background-color: #EAF2F5; }
     </style>
   </head>
   <body>
@@ -158,34 +152,43 @@
       }
 
       function openConnection() {
-        conn = new WebSocket('ws://127.0.0.1:7001');    
-        document.body.innerHTML = 'Connecting...'
-        conn.onopen = function () {
-          document.body.innerHTML = 'Connected.'
-        };
+        console.log('opening connection...')
+        conn = new WebSocket('ws://127.0.0.1:7001');
+
+        var connected = false;
+
+        conn.onopen = function (event) {
+          console.log('connection opened')
+          connected = true;
+          conn.send(JSON.stringify({type: 'ready'}));
+        }
 
         conn.onmessage = function (event) {
-          var html = JSON.parse(event.data);
-          var i,s='';
-          for(i=0;i<20;i++) s+='<br/>';
-          document.body.innerHTML = html+s;
-          MathJax.Hub.Queue(["Typeset",MathJax.Hub]);
+          var message = JSON.parse(event.data);
+          console.log(message);
+          if (message.type === 'html') {
+              document.body.innerHTML = message.html;
+          } else if (message.type === 'close') {
+              window.close()
+          }
+        };
+
+        conn.onerror = function (event) {
+          connected = true;
+          console.log('error', event)
+          conn.close()
         };
 
         conn.onclose = function (event) {
-          document.body.innerHTML = 'Disconnected.'
+          console.log('close', event)
+          if (!connected) {
+            conn.close()
+            openConnection()
+          }
         };
       }
 
-      setTimeout(function () {
-        openConnection();
-      }, 1000);
-    </script>
-    <script type="text/x-mathjax-config">
-      MathJax.Hub.Config({ tex2jax: { inlineMath: [['$','$'], ["\\(","\\)"]], processEscapes: true } });
-    </script>
-    <script type="text/javascript" 
-      src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"> 
+      openConnection();
     </script>
   </body>
 </html>
